--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,36 +1,7 @@
 {
 	"extends": "next/core-web-vitals",
-	"plugins": ["simple-import-sort"],
+	"plugins": ["sort-imports-es6-autofix"],
 	"rules": {
-		"simple-import-sort/imports": "error",
-		"simple-import-sort/exports": "error"
-	},
-	"overrides": [
-		{
-			"files": ["**/*.js", "**/*.ts", "**/*.tsx"],
-			"rules": {
-				"simple-import-sort/imports": [
-					"warning",
-					{
-						"groups": [
-							// `react` first, `next` second, then packages starting with a character
-							["^react$", "^next", "^[a-z]"],
-							// Packages starting with `@`
-							["^@"],
-							// Packages starting with `~`
-							["^~"],
-							// Imports starting with `../`
-							["^\\.\\.(?!/?$)", "^\\.\\./?$"],
-							// Imports starting with `./`
-							["^\\./(?=.*/)(?!/?$)", "^\\.(?!/?$)", "^\\./?$"],
-							// Style imports
-							["^.+\\.s?css$"],
-							// Side effect imports
-							["^\\u0000"]
-						]
-					}
-				]
-			}
-		}
-	]
+		"sort-imports-es6-autofix/sort-imports-es6": ["warn"]
+	}
 }
